--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "censortext",
     "repository": {
         "type": "git",
-//"url": "Enter your github url"
+        "url": "https://github.com/keymaster75/nodejsbook"
     },
     "keywords": [
         "censor",
