Promenjeno polje autor.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "author": "Brad Dayley",
+    "author": "Aleksandar Aleksić",
     "name": "censorify_demo_iz_knjige",
     "version": "0.1.1",
     "description": "Censors words out of text",
